Fix size and alignment of context menu popups with PNG icons
Because the size of images is not known until the image has been loaded,
the context menu popup has to be relayouted when the 'load' (or 'error')
event occurs.

Note: This is a temporary solution for context menu popups only. A
better fix would be that _all_ <img> elements invalidate the layout tree
after the 'load' or 'error' event. However, this cannot be implemented
at the moment, because the menubar's layout always recreates the <img>
tags while layouting, thus retriggering the 'load' events (= endless
loop). We intend to find a general solution in a future Scout version,
a corresponding TODO marker was added to the code.

180815

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.less
@@ -153,7 +153,16 @@
     display: inline-block;
   }
 
+  & > .icon {
+    /* Prevent large image icons from overlapping the menu item */
+    max-height: 16px;
+    /* Default image icon size is 16x16, ensure this space is taken from the beginning, */
+    /* so that the text does not "jump" after the image has been loaded. Only for larger */
+    /* icons, the width will be increased aftwards. */
+    min-width: 16px;
+  }
+
   &.menu-textandicon > .icon {
-    padding-right: 10px;
+    margin-right: 10px;
   }
 }
